--- a/ubuntujoel/Dockerfile
+++ b/ubuntujoel/Dockerfile
@@ -1,3 +1,4 @@
 FROM ubuntu:14.04
 MAINTAINER Joel Cannon <joelc.usa@gmail.com>
-RUN apt-get update && apt-get install -y vim
+RUN apt-get update
+RUN apt-get install -y vim
