--- a/eth-cpp-dapp-dev/Dockerfile
+++ b/eth-cpp-dapp-dev/Dockerfile
@@ -78,17 +78,17 @@ RUN chmod +x /alethZero.sh
 
 # Make the Docker Container GUI capable
 #TODO: Get GUI working (at first, just hard code it): http://fabiorehm.com/blog/2014/09/11/running-gui-apps-with-docker/
-#RUN export uid=1000 gid=1000 && \
-#    mkdir -p /home/developer && \
-#    echo "developer:x:${uid}:${gid}:Developer,,,:/home/developer:/bin/bash" >> /etc/passwd && \
-#    echo "developer:x:${uid}:" >> /etc/group && \
-#    echo "developer ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/developer && \
-#    chmod 0440 /etc/sudoers.d/developer && \
-#    chown ${uid}:${gid} -R /home/developer
-#
-#USER developer
-#ENV HOME /home/developer
-#CMD /usr/bin/firefox
+RUN export uid=1000 gid=1000 && \
+    mkdir -p /home/developer && \
+    echo "developer:x:${uid}:${gid}:Developer,,,:/home/developer:/bin/bash" >> /etc/passwd && \
+    echo "developer:x:${uid}:" >> /etc/group && \
+    echo "developer ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/developer && \
+    chmod 0440 /etc/sudoers.d/developer && \
+    chown ${uid}:${gid} -R /home/developer
+
+USER developer
+ENV HOME /home/developer
+CMD /bin/bash
 
 #TODO: Can I make this Dockerfile parametric? This is needed to get GUI working. See this article on how: http://fabiorehm.com/blog/2014/09/11/running-gui-apps-with-docker/
 
